--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,4 +5,6 @@ api-version: 1.19
 depend: [Citizens]
 commands:
   resident:
+    permission: residents.admin
+    permission-message: "You cannot execute this command."
     usage: /<command>
